--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,25 @@
 
 :root {
     font-family: "Inter", sans-serif;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar-track
+{
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.01);
+    border-radius: 10px;
+    background-color: black;
+}
+
+::-webkit-scrollbar
+{
+    width: 6px;
+    background-color: black;
+}
+
+::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    box-shadow: inset 0 0 5px rgba(0,0,0,.3);
+    background-color: #facc15;
 }
