--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,14 @@
     box-shadow: inset 0 0 5px rgba(0,0,0,.3);
     background-color: #facc15;
 }
+
+.splide__arrow
+,.splide__arrow--prev
+,.splide__arrow--next
+{
+    background-color: #facc15 !important;
+}
+
+.splide__pagination__page.is-active{
+    background-color: #facc15 !important;
+}
